code format add view package and missing comments

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,7 +20,7 @@
         android:layout_height="match_parent"
         app:onRefresh="@{profileViewModel}"
         app:setRefreshStatus="@{profileViewModel.isRefreshing}"
-        tools:context=".profile.ProfileFragment">
+        tools:context=".profile.view.ProfileFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
