--- a/app/src/main/res/navigation/navigation_auth.xml
+++ b/app/src/main/res/navigation/navigation_auth.xml
@@ -18,7 +18,7 @@
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.eu.simpleloginlogout.profile.ProfileFragment"
+        android:name="com.eu.simpleloginlogout.profile.view.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile">
         <action
